@@ -1,22 +1,26 @@
 #<a name="top"></a>Installing Cygnus from sources
 Content:
 
-* [Prerequisites](#prerequisites)
-* [Cygnus user creation](#usercreation)
-* [Installing Apache Flume](#installflume)
-* [Installing Cygnus](#installcygnus)
-* [Installing dependencies](#installdeps)
-    * [Cygnus dependencies](#cygnusdeps)
-    * [OrionCKANSink dependencies](#ckandeps)
-    * [OrionHDFSSink dependencies](#hdfsdeps)
-    * [OrionMySQLSink dependencies](#mysqldeps)
-    * [OrionDynamoDBSink dependencies](#dynamodbdeps)
-    * [OrionMongoSink dependencies](#mongodeps)
-    * [OrionSTHSink dependencies](#sthdeps)
-    * [OrionKafkaSink dependencies](#kafkadeps)
-    * [OrionTestSink dependencies](#testdeps)
+* [Prerequisites](#section1)
+* [Cygnus user creation](#section2)
+* [Installing Apache Flume](#section3)
+* [Installing Cygnus](#section4)
+    * [Cloning `fiware-cygnus`](#section4.1)
+    * [Installing `cygnus-common`](#section4.2)
+    * [Installing `cygnus-ngsi`](#section4.3)
+    * [Known issues](#section4.4)
+* [Installing dependencies](#section5)
+    * [Cygnus dependencies](#section5.1)
+    * [OrionCKANSink dependencies](#section5.2)
+    * [OrionHDFSSink dependencies](#section5.3)
+    * [OrionMySQLSink dependencies](#section5.4)
+    * [OrionDynamoDBSink dependencies](#section5.5)
+    * [OrionMongoSink dependencies](#section5.6)
+    * [OrionSTHSink dependencies](#section5.7)
+    * [OrionKafkaSink dependencies](#section5.8)
+    * [OrionTestSink dependencies](#section5.9)
 
-##<a name="prerequisites"></a>Prerequisites
+##<a name="section1"></a>Prerequisites
 Maven (and thus Java SDK, since Maven is a Java tool) is needed in order to install Cygnus.
 
 In order to install Java SDK (not JRE), just type (CentOS machines):
@@ -37,7 +41,7 @@ Maven is installed by downloading it from [maven.apache.org](http://maven.apache
     
 [Top](#top)
 
-##<a name="usercreation"></a>Cygnus user creation
+##<a name="section2"></a>Cygnus user creation
 It is highly recommended to create a `cygnus` Unix user, under which Cygnus will be installed and run. By the way, this is how the [RPM](./install_with_rpm.md) proceeds.
 
 Creating such a user is quite simple. As a sudoer user (root or any other allowed), type the following:
@@ -54,7 +58,7 @@ Once created, change to this new fresh user in order to proceed with the rest of
     
 [Top](#top)
 
-##<a name="installflume"></a>Installing Apache Flume
+##<a name="section3"></a>Installing Apache Flume
 Apache Flume can be easily installed by downloading its latests version from [flume.apache.org](http://flume.apache.org/download.html). Move the untared directory to a folder of your choice (represented by `APACHE_FLUME_HOME`):
 
     $ wget http://www.eu.apache.org/dist/flume/1.4.0/apache-flume-1.4.0-bin.tar.gz
@@ -74,43 +78,72 @@ Some remarks:
 
 [Top](#top)
 
-##<a name="installcygnus"></a>Installing Cygnus
-Then, the developed classes must be packaged in a Java jar file; this can be done by including the dependencies in the package (**recommended**):
-
-    $ git clone https://github.com/telefonicaid/fiware-cygnus.git
-    $ cd fiware-cygnus
-    $ git checkout <branch>
-
-Edit the `pom.xml` if necessary (*), then continue:
-
-    $ APACHE_MAVEN_HOME/bin/mvn clean compile exec:exec assembly:single
-    $ cp target/cygnus-<x.y.z>-jar-with-dependencies.jar APACHE_FLUME_HOME/plugins.d/cygnus/lib
-    $ cp target/classes/cygnus-flume-ng APACHE_FLUME_HOME/bin
-    $ chmod a+x APACHE_FLUME_HOME/bin/cygnus-flume-ng
-
-or not:
+##<a name="section4"></a>Installing Cygnus
+###<a name="section4.1"></a>Cloning `fiware-cygnus`
+Start by cloning the Github repository:
 
     $ git clone https://github.com/telefonicaid/fiware-cygnus.git
     $ cd fiware-cygnus
     $ git checkout <branch>
     
-Edit the `pom.xml` if necessary (*), then continue:
+`<branch>` should be typically a stable release branch, e.g. `release/0.13.0`, but could also be `master` (synchronized with the latest release) or `develop` (contains the latest not stable changes).
 
+[Top](#top)
+
+###<a name="section4.2"></a>Installing `cygnus-common`
+`cygnus-ngsi` agent requires `cygnus-common`. At the moment of writing, this kind of dependency is not available at any Maven repository, thus must be built and installed from the sources.
+
+Thus, the developed classes must be packaged in a Java jar file. This can be done as a fat Java jar containing all the third-party dependencies  (**recommended**). You may need to edit the `pom.xml` (\*):
+
+    $ cd cygnus-common
+    $ APACHE_MAVEN_HOME/bin/mvn clean compile exec:exec assembly:single
+    $ cp target/cygnus-common-<x.y.z>-jar-with-dependencies.jar APACHE_FLUME_HOME/plugins.d/cygnus/libext
+
+Or as a thin Java jar file containing only the `cygnus-common` classes. You may need to edit the `pom.xml` if necessary (\*):
+
+    $ cd cygnus-common
     $ APACHE_MAVEN_HOME/bin/mvn exec:exec package
-    $ cp target/cygnus-<x.y.z>.jar APACHE_FLUME_HOME/plugins.d/cygnus/lib
-    $ cp target/classes/cygnus-flume-ng APACHE_FLUME_HOME/bin
-    $ chmod a+x APACHE_FLUME_HOME/bin/cygnus-flume-ng
+    $ cp target/cygnus-<x.y.z>.jar APACHE_FLUME_HOME/plugins.d/cygnus/libext
 
-where `<branch>` is `develop` if you are trying to install the latest features or `release/<x.y.z>` if you are trying to install a stable release. `<x.y.z>` stands for a specific version number (e.g. `0.3`, `0.5.1`...).
+Please observe in this case, and depending on the Cygnus components you are going to use, you may need to install [additional](#section5) third-party .jar files under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/`. Typically, you can get these jar files from your Maven repository (under `.m2` in your user home directory) and use the `cp` command.
 
-If the dependencies are included in the built Cygnus package, then nothing has to be done. If not, and depending on the Cygnus components you are going to use, you may need to install additional .jar files under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/`. Typically, you can get the .jar file from your Maven repository (under `.m2` in your user home directory) and use the `cp` command.
+In both cases, the `cygnus-common` dependency must be installed at Maven as well, in order to build `cygnus-ngsi`. Just run the following command:
+
+    $ mvn install:install-file -Dfile=APACHE_MAVEN_HOME/plugins.d/cygnus/libext/cygnus-common-<x.y.z>-jar-with-dependencies.jar -DgroupId=com.telefonica.iot -DartifactId=cygnus-common -Dversion=<x.y.z> -Dpackaging=jar -DgeneratePom=false
 
 (*) Please have into account from Cygnus 0.10.0 the version of `hadoop-core` within the `pom.xml` must match the Hadoop version you are going to use; on the contrary, the HDFS sink will not work. Of course, if you are not going to use the HDFS sink, simply use the default `hadoop-core` version (1.2.1) within the downloaded `pom.xml` for correct compilation purposes.
 
 [Top](#top)
 
-##<a name="installdeps"></a>Installing dependencies
-###<a name="cygnusdeps"></a>Cygnus dependencies
+###<a name="section4.3"></a>Installing `cygnus-ngsi`
+`cygnus-ngsi` can be built as a fat Java jar file containing all third-party dependencies (**recommended**):
+
+    $ cd cygnus-ngsi
+    $ APACHE_MAVEN_HOME/bin/mvn clean compile exec:exec assembly:single
+    $ cp target/cygnus-ngsi-<x.y.z>-jar-with-dependencies.jar APACHE_FLUME_HOME/plugins.d/cygnus/lib
+    
+Or as a thin Java jar file:
+
+    $ cd cygnus-ngsi
+    $ APACHE_MAVEN_HOME/bin/mvn exec:exec package
+    $ cp target/cygnus-<x.y.z>.jar APACHE_FLUME_HOME/plugins.d/cygnus/lib
+    
+In both cases, the installation is completed by copying the `cygnus-flume-ng` script into `APACHE_FLUME_HOME/bin`:
+
+    $ cp target/classes/cygnus-flume-ng APACHE_FLUME_HOME/bin
+    $ chmod a+x APACHE_FLUME_HOME/bin/cygnus-flume-ng
+
+[Top](#top)
+
+###<a name="section4.4"></a>Known issues
+It may happen while compiling either `cygnus-common` either `cygnus-ngsi` the Maven JVM has not enough memory. This can be changed as detailed at the [Maven official documentation](https://cwiki.apache.org/confluence/display/MAVEN/OutOfMemoryError):
+
+    $ export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+
+[Top](#top)
+
+##<a name="section5"></a>Installing dependencies
+###<a name="section5.1"></a>Cygnus dependencies
 These are the packages you will need to install under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/` **if you did not included them in the Cygnus package**:
 
 |  Cygnus dependencies  |   Version   |
@@ -124,7 +157,7 @@ These are the packages you will need to install under `APACHE_FLUME_HOME/plugins
 
 [Top](#top)
 
-###<a name="ckandeps"></a>OrionCKANSink dependencies
+###<a name="section5.2"></a>OrionCKANSink dependencies
 These are the packages you will need to install under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/` **if you did not included them in the Cygnus package**:
 
 |  OrionCKANSink dependencies |   Version    |
@@ -134,7 +167,7 @@ These are the packages you will need to install under `APACHE_FLUME_HOME/plugins
 
 [Top](#top)
 
-###<a name="hdfsdeps"></a>OrionHDFSSink dependencies
+###<a name="section5.3"></a>OrionHDFSSink dependencies
 These are the packages you will need to install under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/` **if you did not included them in the Cygnus package**:
 
 |  OrionHDFSSink dependencies  |      Version       |
@@ -150,7 +183,7 @@ These are the packages you will need to install under `APACHE_FLUME_HOME/plugins
 
 [Top](#top)
 
-###<a name="mysqldeps"></a>OrionMysQLSink dependencies
+###<a name="section5.4"></a>OrionMysQLSink dependencies
 These are the packages you will need to install under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/` **if you did not included them in the Cygnus package**:
 
 |  OrionMySQLSink dependencies |   Version   |
@@ -159,7 +192,7 @@ These are the packages you will need to install under `APACHE_FLUME_HOME/plugins
 
 [Top](#top)
 
-###<a name="dynamodbdeps"></a>OrionDynamoDBSink dependencies
+###<a name="section5.5"></a>OrionDynamoDBSink dependencies
 These are the packages you will need to install under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/` **if you did not included them in the Cygnus package**:
 
 |  OrionDynamoDBSink dependencies |   Version    |
@@ -170,7 +203,7 @@ These are the packages you will need to install under `APACHE_FLUME_HOME/plugins
  
 [Top](#top)
 
-###<a name="mongodeps"></a>OrionMongoSink dependencies
+###<a name="section5.6"></a>OrionMongoSink dependencies
 These are the packages you will need to install under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/` **if you did not included them in the Cygnus package**:
 
 |  OrionMongoSink dependencies |   Version   |
@@ -179,7 +212,7 @@ These are the packages you will need to install under `APACHE_FLUME_HOME/plugins
 
 [Top](#top)
 
-###<a name="sthdeps"></a>OrionSTHSink dependencies
+###<a name="section5.7"></a>OrionSTHSink dependencies
 These are the packages you will need to install under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/` **if you did not included them in the Cygnus package**:
 
 |   OrionSTHSink dependencies  |   Version   |
@@ -188,7 +221,7 @@ These are the packages you will need to install under `APACHE_FLUME_HOME/plugins
 
 [Top](#top)
 
-###<a name="kafkadeps"></a>OrionKafkaSink dependencies
+###<a name="section5.8"></a>OrionKafkaSink dependencies
 These are the packages you will need to install under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/` **if you did not included them in the Cygnus package**:
 
 | OrionKafkaSink dependencies |    Version   |
@@ -199,7 +232,7 @@ These are the packages you will need to install under `APACHE_FLUME_HOME/plugins
 
 [Top](#top)
 
-###<a name="testdeps"></a>OrionTestSink dependencies
+###<a name="section5.9"></a>OrionTestSink dependencies
 These are the packages you will need to install under `APACHE_FLUME_HOME/plugins.d/cygnus/libext/` **if you did not included them in the Cygnus package**:
 
 | OrionTestSink dependencies |   Version   |
